# code

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  HOWTO.md  MODULE.bazel  Makefile  README.md  WORKSPACE  bazel  go.mod  go.sum  repositories.bzl  tools.go  tools.mk
adventofcode/cc/: BUILD.bazel  trim.cc  trim.h  trim_test.cc
adventofcode/cc/geometry/: BUILD.bazel  pos.cc  pos.h  pos_test.cc
adventofcode/cc/tools/: build_defs.bzl  cc_aoc_test.bzl
adventofcode/cc/tools/generate_benchmark/: BUILD.bazel  dayXX_benchmark.cc.template  main.go  main_test.go
adventofcode/cc/tools/generate_benchmark/testdata/: test.out
adventofcode/cc/tools/generate_header/: BUILD.bazel  dayXX.h.template  main.go  main_test.go
adventofcode/cc/tools/generate_test/: BUILD.bazel  dayXX_test.cc.template  main.go  main_test.go
adventofcode/cc/tools/generate_test/testdata/: test.in
adventofcode/cc/year2022/: BUILD.bazel  day01.cc  day01.h  day01_benchmark.cc  day01_test.cc  day02.cc  day02.h  day02_benchmark.cc  day02_test.cc  day03.cc  day03.h  day04.cc  day04.h  day05.cc  day05.h  day06.cc  day06.h  day07.cc  day07.h  day08.cc  day09.cc  day10.cc  day11.cc  day12.cc  day13.cc  day14.cc  day15.cc  day15_example.cc  day15_example.h  day15_shared.cc  day15_shared.h  day16.cc  day17.cc  day18.cc  day19.cc  day20.cc  day21.cc  day22.cc  day23.cc  day24.cc  (+1 more)
adventofcode/data/year2022/: day05.real.part1.out  day05.real.part2.out  day11.real.part2.out  day15.real.part1.out  day15.real.part2.out  day17.real.part2.out  day20.real.part2.out  day21.real.part1.out  day21.real.part2.out  day25.real.part1.out
auth/: BUILD.bazel  auth.go
auth/n/basic/: BUILD.bazel  credentials.go  credentials_test.go  doc.go  interceptor.go  interceptor_test.go
docker/config/: BUILD.bazel
docker/config/generate_config/: BUILD.bazel  config.json.template  generate_config.go
docker/dockertest/: BUILD.bazel  dockertest.go  dockertest_test.go
docker/dockertest/httpserver/: BUILD.bazel  main.go
docker/go/: image_with_ports.bzl
docker/imagetar/: BUILD.bazel  imagetar.go  imagetar_test.go
gcp/: .gitignore  BUILD.bazel  constants.bzl.template  container.bzl  gcp_test.go
grpclog/klogger/: BUILD.bazel  klogger.go
grpctest/: BUILD.bazel  grpctest.go  grpctest_test.go
grpctest/generate_certificate/: BUILD.bazel  generate_certificate.go
patches/com_github_docker_cli/: 01-fix-broken-embeds.patch  README.md
postgres/: BUILD.bazel  postgres.go
postgres/log/glogadapter/: BUILD.bazel  glogadapter.go
postgres/log/klogadapter/: BUILD.bazel  klogadapter.go
postgres/postgrestest/: BUILD.bazel  postgrestest.go  postgrestest_test.go  schema.sql
redis/: BUILD.bazel
redis/redistest/: BUILD.bazel  redistest.go  redistest_test.go
runfiles/: BUILD.bazel  runfiles.go  runfiles_test.go  test.txt
runfiles/cc/: BUILD.bazel  runfiles.cc  runfiles.h  runfiles_test.cc
tasks/: tasks.proto
tasks/fake/: BUILD.bazel  errors.go  fake.go  fake_test.go
tasks/fake/server/: BUILD.bazel  server.go
tasks/postgres/: BUILD.bazel  schema.sql  schema_test.go
tasks/server/: BUILD.bazel  server.go
tasks/service/: BUILD.bazel  service.go  service_test.go
tasks/tasks_go_proto/: BUILD.bazel  tasks.pb.go  tasks_grpc.pb.go
tasks/testsuite/: BUILD.bazel  client.go  doc.go  labels.go  projects.go  tasks.go  testsuite.go
tasks/tui/: BUILD.bazel  main.go
tasks/tui/root/: BUILD.bazel  root.go
tasks/tui/tasklist/: BUILD.bazel  tasklist.go
tasks/tui/tasksclient/: BUILD.bazel  tasksclient.go
testing/: echo.proto
testing/echo/: BUILD.bazel  echo.go
testing/echo_go_proto/: BUILD.bazel  echo.pb.go  echo_grpc.pb.go
testing/tls/: BUILD.bazel
testing/tls/generate_certificate/: BUILD.bazel  generate_certificate.go
