load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "gcp_test",
    srcs = ["gcp_test.go"],
    data = [
        "constants.bzl",
        "constants.bzl.template",
    ],
    deps = [
        "//runfiles",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@io_k8s_klog_v2//:klog",
    ],
)
