load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpctest",
    srcs = ["grpctest.go"],
    data = [
        "//testing/tls:test_cert.pem",
        "//testing/tls:test_key.pem",
    ],
    importpath = "go.saser.se/grpctest",
    visibility = ["//visibility:public"],
    deps = [
        "//runfiles",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
    ],
)

go_test(
    name = "grpctest_test",
    srcs = ["grpctest_test.go"],
    embed = [":grpctest"],
    deps = [
        "//testing/echo",
        "//testing/echo_go_proto",
        "@org_golang_google_grpc//:grpc",
    ],
)
