load("@rules_go//go:def.bzl", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_load")

oci_load(
    name = "image",
    image = "@postgres",
    repo_tags = ["saser.se/postgres/postgres:latest"],
)

filegroup(
    name = "image.tar",
    srcs = [":image"],
    output_group = "tarball",
    visibility = ["//postgres:__subpackages__"],
)

go_library(
    name = "postgres",
    srcs = ["postgres.go"],
    importpath = "go.saser.se/postgres",
    visibility = ["//visibility:public"],
    deps = [
        "//postgres/log/klogadapter",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_jackc_pgx_v5//tracelog",
        "@com_github_masterminds_squirrel//:squirrel",
    ],
)
