load("@rules_go//go:def.bzl", "go_library", "go_test")

exports_files(
    ["test.txt"],
    visibility = ["//runfiles:__subpackages__"],
)

go_library(
    name = "runfiles",
    srcs = ["runfiles.go"],
    importpath = "go.saser.se/runfiles",
    visibility = ["//visibility:public"],
    deps = ["@rules_go//go/tools/bazel"],
)

go_test(
    name = "runfiles_test",
    srcs = ["runfiles_test.go"],
    data = ["test.txt"],
    embed = [":runfiles"],
)
