load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//adventofcode/cc:__subpackages__"])

cc_library(
    name = "trim",
    srcs = ["trim.cc"],
    hdrs = ["trim.h"],
    deps = ["@abseil-cpp//absl/strings"],
)

cc_test(
    name = "trim_test",
    srcs = ["trim_test.cc"],
    deps = [
        ":trim",
        "@googletest//:gtest_main",
    ],
)
