load("//gcp:constants.bzl", "REGION")

# NOTE: the config.json file must be generated since it is not stored in version
# control. The genrule below can be used to generate the config.json file, but
# it must then be manually copied in place. To do so, execute the following
# (assuming working directory is the root of this repository):
#
#     $ ./bazel build //docker/config:generated_config.json
#     $ cp bazel-bin/docker/config/generated_config.json docker/config/config.json

genrule(
    name = "generated_config_json",
    outs = ["generated_config.json"],
    cmd = " ".join([
        "$(location //docker/config/generate_config)",
        '-region="{REGION}"'.format(REGION = REGION),
        '-output="$(location generated_config.json)"',
    ]),
    exec_tools = ["//docker/config/generate_config"],
)
