load("@rules_go//go:def.bzl", "go_library", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_load")

oci_load(
    name = "hello_world",
    image = "@hello_world",
    repo_tags = ["saser.se/docker/dockertest/hello_world:latest"],
)

filegroup(
    name = "hello_world.tar",
    srcs = [":hello_world"],
    output_group = "tarball",
)

oci_load(
    name = "nginx",
    image = "@nginx",
    repo_tags = ["saser.se/docker/dockertest/nginx:latest"],
)

filegroup(
    name = "nginx.tar",
    srcs = [":nginx"],
    output_group = "tarball",
)

go_library(
    name = "dockertest",
    srcs = ["dockertest.go"],
    importpath = "go.saser.se/docker/dockertest",
    visibility = ["//visibility:public"],
    deps = [
        "//runfiles",
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_ory_dockertest_v3//:dockertest",
        "@com_github_ory_dockertest_v3//docker",
    ],
)

go_test(
    name = "dockertest_test",
    srcs = ["dockertest_test.go"],
    data = [
        ":hello_world.tar",
        ":nginx.tar",
    ],
    embed = [":dockertest"],
    deps = [
        "//runfiles",
        "@com_github_cenkalti_backoff_v4//:backoff",
    ],
)
