load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

container_image(
    name = "testimage",
    base = "@hello_world_image//image",
)

go_library(
    name = "imagetar",
    srcs = ["imagetar.go"],
    importpath = "go.saser.se/docker/imagetar",
    visibility = ["//visibility:public"],
)

go_test(
    name = "imagetar_test",
    srcs = ["imagetar_test.go"],
    data = [":testimage.tar"],
    embed = [":imagetar"],
    deps = [
        "//runfiles",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
