load("@io_bazel_rules_docker//container:bundle.bzl", "container_bundle")
load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

container_image(
    name = "testimage_hello_world",
    base = "@hello_world_image//image",
)

container_image(
    name = "testimage_hola_mundo",
    base = "@hello_world_image//image",
)

container_bundle(
    name = "testbundle",
    images = {
        "bazel/docker/imagetar:testimage_hello_world": ":testimage_hello_world",
        "bazel/docker/imagetar:testimage_hola_mundo": ":testimage_hola_mundo",
    },
)

go_library(
    name = "imagetar",
    srcs = ["imagetar.go"],
    importpath = "go.saser.se/docker/imagetar",
    visibility = ["//visibility:public"],
)

go_test(
    name = "imagetar_test",
    srcs = ["imagetar_test.go"],
    data = [
        "testbundle.tar",
        "testimage_hello_world.tar",
    ],
    embed = [":imagetar"],
    deps = [
        "//runfiles",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
