load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "klogger",
    srcs = ["klogger.go"],
    importpath = "go.saser.se/grpclog/klogger",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_klog_v2//:klog",
        "@org_golang_google_grpc//grpclog",
    ],
)
