load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "runfiles",
    srcs = ["runfiles.cc"],
    hdrs = ["runfiles.h"],
    deps = [
        "@bazel_tools//tools/cpp/runfiles",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "runfiles_test",
    srcs = ["runfiles_test.cc"],
    data = ["//runfiles:test.txt"],
    deps = [
        ":runfiles",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)
