load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "runfiles",
    srcs = ["runfiles.cc"],
    hdrs = ["runfiles.h"],
    deps = [
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_test(
    name = "runfiles_test",
    srcs = ["runfiles_test.cc"],
    data = ["//runfiles:test.txt"],
    deps = [
        ":runfiles",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest_main",
    ],
)
