load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "fake",
    srcs = ["fake.go"],
    importpath = "go.saser.se/tasks/fake",
    visibility = ["//visibility:public"],
    deps = [
        "//tasks/tasks_go_proto",
        "@com_github_golang_glog//:glog",
        "@com_github_google_uuid//:uuid",
        "@com_github_jonboulle_clockwork//:clockwork",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "fake_test",
    srcs = ["fake_test.go"],
    embed = [":fake"],
    deps = [
        "//tasks/tasks_go_proto",
        "//tasks/testsuite",
        "@com_github_jonboulle_clockwork//:clockwork",
        "@com_github_stretchr_testify//suite",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//test/bufconn",
    ],
)
