load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//gcp:container.bzl", "gcp_docker_push")

go_library(
    name = "server_lib",
    srcs = ["server.go"],
    importpath = "go.saser.se/tasks/server",
    visibility = ["//visibility:private"],
    deps = [
        "//auth/n/basic",
        "//postgres",
        "//tasks/service",
        "//tasks/tasks_go_proto",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "server_image",
    binary = ":server",
)

gcp_docker_push(
    name = "push_server_image_as_latest",
    image = ":server_image",
    repository = "tasks/server/server_image",
    tag = "latest",
)
