load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["server.go"],
    importpath = "go.saser.se/tasks/server",
    visibility = ["//visibility:private"],
    deps = [
        "//auth/n/basic",
        "//grpclog/klogger",
        "//postgres",
        "//tasks/service",
        "//tasks/tasks_go_proto",
        "@io_k8s_klog_v2//:klog",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "server_image",
    binary = ":server",
)
