load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "go.saser.se/tasks/service",
    visibility = ["//visibility:public"],
    deps = [
        "//postgres",
        "//tasks/tasks_go_proto",
        "@com_github_google_uuid//:uuid",
        "@com_github_jackc_pgconn//:pgconn",
        "@com_github_jackc_pgerrcode//:pgerrcode",
        "@com_github_jackc_pgtype//:pgtype",
        "@com_github_jackc_pgx_v4//:pgx",
        "@com_github_jonboulle_clockwork//:clockwork",
        "@com_github_masterminds_squirrel//:squirrel",
        "@io_k8s_klog_v2//:klog",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "service_test",
    srcs = ["service_test.go"],
    data = ["//tasks/postgres:schema.sql"],
    embed = [":service"],
    deps = [
        "//grpctest",
        "//postgres",
        "//postgres/postgrestest",
        "//tasks/tasks_go_proto",
        "//tasks/testsuite",
        "@com_github_jonboulle_clockwork//:clockwork",
        "@com_github_stretchr_testify//suite",
    ],
)
