load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tui_lib",
    srcs = ["main.go"],
    importpath = "go.saser.se/tasks/tui",
    visibility = ["//visibility:private"],
    deps = [
        "//tasks/tui/root",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@io_k8s_klog_v2//:klog",
    ],
)

go_binary(
    name = "tui",
    embed = [":tui_lib"],
    visibility = ["//visibility:public"],
)
