load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "echo_go_proto",
    srcs = [
        "echo.pb.go",
        "echo_grpc.pb.go",
    ],
    importpath = "go.saser.se/testing/echo_go_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
