load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//adventofcode/cc:__subpackages__"])

cc_library(
    name = "pos",
    srcs = ["pos.cc"],
    hdrs = ["pos.h"],
    deps = ["@com_google_absl//absl/strings:str_format"],
)

cc_test(
    name = "pos_test",
    srcs = ["pos_test.cc"],
    deps = [
        ":pos",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest_main",
    ],
)
