load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//adventofcode/cc:__subpackages__"])

cc_library(
    name = "pos",
    srcs = ["pos.cc"],
    hdrs = ["pos.h"],
    deps = ["@abseil-cpp//absl/strings:str_format"],
)

cc_test(
    name = "pos_test",
    srcs = ["pos_test.cc"],
    deps = [
        ":pos",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/strings:str_format",
        "@googletest//:gtest_main",
    ],
)
